--- a/tributo.html
+++ b/tributo.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="apresentacao">
       <h1>Gon Freecss</h1>
-      <h2>Aventureiro, otimista, amigo leal e um exímio Hunter</h2>
+      <h2>Aventureiro, otimista, amigo leal e um exìmio Hunter</h2>
       <img src="images/gon_basic.jpg" alt="Gon Hunter x Hunter">
     </div>
     <div class="historia">
@@ -31,7 +31,8 @@
         </div>
         <div class="trajetoria_info">
           <div class="trajetoria_img"><img src="images/gon2.png" alt="Gon correndo"></div>
-          <div class="trajetoria_desc">Gon durante a primeira etapa do processo Hunter, onde precisou que correr por um longo percurso.</div>
+          <div class="trajetoria_desc">Gon durante a primeira etapa do processo Hunter, onde precisou correr por um
+            longo percurso.</div>
         </div>
         <div class="trajetoria_info">
           <div class="trajetoria_img"><img src="images/gon3.png" alt="Gon no precipìcio"></div>
@@ -40,15 +41,18 @@
         </div>
         <div class="trajetoria_info">
           <div class="trajetoria_img"><img src="images/gon4.jpg" alt="Gon na prisão"></div>
-          <div class="trajetoria_desc">Gon durante a terceira etapa do processo Hunter, onde os candidatos deveriam escapar de uma prisão com tempo limite.</div>
+          <div class="trajetoria_desc">Gon durante a terceira etapa do processo Hunter, onde os candidatos deveriam
+            escapar de uma prisão com tempo limite.</div>
         </div>
         <div class="trajetoria_info">
           <div class="trajetoria_img"><img src="images/gon5.png" alt="Gon bravo"></div>
-          <div class="trajetoria_desc">Gon durante a quarta etapa do processo Hunter, prova de sobrevivência em uma floresta.</div>
+          <div class="trajetoria_desc">Gon durante a quarta etapa do processo Hunter, prova de sobrevivência em uma
+            floresta.</div>
         </div>
         <div class="trajetoria_info">
           <div class="trajetoria_img"><img src="images/gon6.png" alt="Candidatos do torneio"></div>
-          <div class="trajetoria_desc">Gon durante a ùltima etapa do processo Hunter, um torneio entre os candidatos restantes.</div>
+          <div class="trajetoria_desc">Gon durante a ùltima etapa do processo Hunter, um torneio entre os candidatos
+            restantes.</div>
         </div>
         <div class="trajetoria_info">
           <div class="trajetoria_img"><img src="images/gon7.png" alt="Gon e a Trupe Fantasma"></div>
@@ -56,10 +60,29 @@
         </div>
         <div class="trajetoria_info">
           <div class="trajetoria_img"><img src="images/gon8.jpg" alt="Gon e a Trupe Fantasma"></div>
-          <div class="trajetoria_desc">Gon durante os eventos em Greed Island, onde adentra ao jogo em que seu pai criou e amplia suas habilidades.</div>
+          <div class="trajetoria_desc">Gon durante os eventos em Greed Island, onde adentra ao jogo em que seu pai criou
+            e amplia suas habilidades.</div>
+        </div>
+        <div class="trajetoria_info">
+          <div class="trajetoria_img"><img src="images/gon9.png" alt="Gon, Kaito e Killua"></div>
+          <div class="trajetoria_desc">Gon durante a saga das Chimera Ants, formigas que evoluiram de forma assustadora
+            e mataram Kaito, uma pessoa muito querida por ele.</div>
+        </div>
+        <div class="trajetoria_info">
+          <div class="trajetoria_img"><img src="images/gon10.png" alt="Gon no hospital"></div>
+          <div class="trajetoria_desc">Gon no hospital apòs as batalhas contra as Chimera Ants, apesar de seu estado ele
+            foi vitorioso.</div>
         </div>
       </div>
     </div>
+    <div class="referencias">
+      Caso queira saber mais sobre a vida de Gon Freecss, por favor <a
+        href="https://hunter-x-hunter.fandom.com/pt/wiki/Gon_Freecss">clique aqui</a>.
+    </div>
+    <footer>
+      &copy; Icaro Paiva
+    </footer>
+  </div>
 </body>
 
 </html>
