--- a/tributo.html
+++ b/tributo.html
@@ -73,16 +73,30 @@
           <div class="trajetoria_desc">Gon no hospital apòs as batalhas contra as Chimera Ants, apesar de seu estado ele
             foi vitorioso.</div>
         </div>
+        <div class="trajetoria_info">
+          <div class="trajetoria_img"><img src="images/gon11.png" alt="Gon e Ging"></div>
+          <div class="trajetoria_desc">Após Gon se recuperar no hospital ele e seu pai finalmente se reencontraram.
+          </div>
+        </div>
       </div>
     </div>
     <div class="referencias">
-      Caso queira saber mais sobre a vida de Gon Freecss, por favor <a
+      Caso queira saber mais sobre a vida de Gon Freecss ou a história de Hunter x Hunter, por favor <a
         href="https://hunter-x-hunter.fandom.com/pt/wiki/Gon_Freecss">clique aqui</a>.
     </div>
     <footer>
       &copy; Icaro Paiva
+      <a href="https://github.com/icarodpaiva" target="_blank"><img src="images/github.png" alt="Icone do Github"></a>
+      <a href="https://www.linkedin.com/in/icarodpaiva/" target="_blank"><img src="images/linkedin.png"
+          alt="Icone do Linkedin"></a>
+      <a href="mailto:icaro.paiva@fatec.sp.gov.br" target="_blank"><img src="images/outlook.png"
+          alt="Icone do Outlook"></a>
+      <a href="https://api.whatsapp.com/send?phone=5511977830855&text=Ol%C3%A1%20%C3%8Dcaro%2C%20vi%20seu%20trabalho%20e%20achei%20muito%20bacana!"
+        target="_blank"><img src="images/whatsapp.png" alt="Icone do whatsapp"></a>
+      <a href="https://www.facebook.com/icaro.paiva.39/" target="_blank"><img src="images/facebook.png"
+          alt="Icone do Facebook"></a>
+      <div><a href="#">Topo &uarr;</a></div>
     </footer>
   </div>
 </body>
-
 </html>
