correcao nos textos

--- a/tributo.html
+++ b/tributo.html
@@ -20,7 +20,7 @@
     <div class="historia">
       <p>Um garoto crescido na Ilha da Baleia que buscou com todas as suas forças ficar mais forte para que pudesse se
         tornar um verdadeiro Hunter. Envolveu-se em uma grande aventura em busca de seu pai, um hunter profissional, que
-        deixou seu filho aos cuidados de sua irmã para que pudesse se dedicar á profissão.</p>
+        o deixou aos cuidados de sua irmã para que pudesse se dedicar á profissão.</p>
     </div>
     <div class="trajetoria_container">
       <div class="trajetoria">
@@ -75,7 +75,7 @@
         </div>
         <div class="trajetoria_info">
           <div class="trajetoria_img"><img src="images/gon11.png" alt="Gon e Ging"></div>
-          <div class="trajetoria_desc">Após Gon se recuperar no hospital ele e seu pai finalmente se reencontraram.
+          <div class="trajetoria_desc">Apòs Gon se recuperar no hospital ele e seu pai finalmente se reencontraram.
           </div>
         </div>
       </div>
